# cpp_battleground

./: .gitignore  .travis.yml  .zshrc  CMakeLists.txt  README.md
CoffeeMachineApp/: CMakeLists.txt
CoffeeMachineApp/src/: BasicCoffeeMachine.cpp  BasicCoffeeMachine.h  CMakeLists.txt  PremiumCoffeeMachine.cpp  PremiumCoffeeMachine.h  main.cpp
CoffeeMachineApp/src/helper/: try_find.hpp
CoffeeMachineApp/src/interface/: ICoffeeMachine.h  IEspressoMachine.h  IFilterCoffeeMachine.h
CoffeeMachineApp/src/models/: BasicCoffeeMachine.cpp  BasicCoffeeMachine.h  (+2 more)
async_thread_app/: CMakeLists.txt
async_thread_app/src/: CMakeLists.txt  main.cpp
constructors/: CMakeLists.txt
constructors/src/: CMakeLists.txt  main.cpp
fmt_app/: CMakeLists.txt
fmt_app/src/: CMakeLists.txt  main.cpp
lamba_functor_app/: CMakeLists.txt
lamba_functor_app/src/: main.cpp
loopers_and_dispatchers_app/: CMakeLists.txt
loopers_and_dispatchers_app/src/: CMakeLists.txt  c_looper.hpp  main.cpp
optional_expected_app/: CMakeLists.txt
optional_expected_app/src/: CMakeLists.txt  main.cpp
producer/: CMakeLists.txt
producer/src/: main.cpp
progress_bar_app/: CMakeLists.txt
progress_bar_app/src/: NamedType.hpp  ProgressBar.hpp  main.cpp
ranges_app/: CMakeLists.txt
ranges_app/src/: CMakeLists.txt  main.cpp
std_variant_app/: CMakeLists.txt
std_variant_app/src/: main.cpp
strong_types_app/: CMakeLists.txt
strong_types_app/src/: CMakeLists.txt  main.cpp
testapp/: CMakeLists.txt
testapp/src/: CMakeLists.txt  DrawableRectangle.cpp  DrawableRectangle.h  Rectangle.hpp  main.cpp
(+10 files in other folders)
